--- a/src/Taxlab.ApiClientLibrary/Taxlab.ApiClientLibrary.csproj
+++ b/src/Taxlab.ApiClientLibrary/Taxlab.ApiClientLibrary.csproj
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="NodaTime" Version="3.0.5" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
 	</ItemGroup>
