--- a/src/Taxlab.ApiClientCli/Taxlab.ApiClientCli.csproj
+++ b/src/Taxlab.ApiClientCli/Taxlab.ApiClientCli.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="NodaTime" Version="3.0.5" />
+    <PackageReference Include="Spire.XLS" Version="11.7.0" />
   </ItemGroup>
 
 </Project>
