--- a/src/Taxlab.ApiClientCli/Taxlab.ApiClientCli.csproj
+++ b/src/Taxlab.ApiClientCli/Taxlab.ApiClientCli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,12 +10,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NodaTime" Version="3.0.5" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+	  <PackageReference Include="NodaTime" Version="3.0.5" />
     <PackageReference Include="Spire.XLS" Version="11.7.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.0.2">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
